# Strife.SingleplayerDemo

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  SingleplayerDemo.json  vcpkg.json
.github/workflows/: cmake.yml
assets/: Content.json  SingleplayerDemo.sfProj
assets/Prefabs/: castle.sfFab
assets/Scenes/: erebor.sfSce
assets/Tilemaps/: Doriath.tmx  Erebor.tmx  Eriador.tmx  Isengard.tmx  Islands.tmx  Ithilien.tmx  Soccer.tmx  demo.tmx  greenhills.tmx  proto.tmx
src/: CMakeLists.txt  CastleEntity.cpp  CastleEntity.hpp  FireballEntity.cpp  FireballEntity.hpp  GameML.hpp  GoalEntity.cpp  GoalEntity.hpp  HealthBarComponent.cpp  HealthBarComponent.hpp  InputService.cpp  InputService.hpp  PlayerEntity.cpp  PlayerEntity.hpp  PlayerNeuralNetworkService.cpp  PlayerNeuralNetworkService.hpp  PuckEntity.cpp  main.cpp
src/GameML/: BehaviorCloning.hpp  DDQN.hpp
